--- a/app/src/main/res/layout/pin_row.xml
+++ b/app/src/main/res/layout/pin_row.xml
@@ -12,9 +12,17 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingStart="@dimen/row_padding"
+        android:orientation="vertical">
+
         <TextView
-            android:id="@+id/description_text"
+            android:id="@+id/title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/username_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
